fix banner, clearn code
