# apis/banner/bannerApi.js
@@ -12,22 +12,12 @@ bannerApi.get('/', async (req, res, next) => {
     try {
         const result = await bannerService.getAllBanner()
 
-        return res.status(200).json({status:200,message:"Success",data:result})
+        return res.status(200).json({status:200,data: result})
     } catch (error) {
         return res.status(500).json({status:500,message: error})
     }
 })
 
-bannerApi.get('/:id', async (req, res, next) => {
-    try {
-        let {id} = req.params
-        const Banner = await bannerService.getBannerById(id)
-
-        return res.status(200).json({status:200,message:"Success",data: Banner})
-    } catch (error) {   
-        return res.status(500).json({status:500,message: error})
-    }
-})
 
 bannerApi.post('/',verifyToken,adminRole,
     async (req, res, next) => {
@@ -35,33 +25,11 @@ bannerApi.post('/',verifyToken,adminRole,
            
             let {list_images} = req.body
             const insertedId = await bannerService.createBanner(list_images)
-            return res.status(200).json({status:200,message: `Create new banner id ${insertedId} successfully`})
+            return res.status(200).json({status:200,message: `Update  banner id successfully`})
         } catch (error) {
             return res.status(500).json({status:500,message: error})
         }
-    })
-bannerApi.put('/:id',verifyToken,adminRole,
-    async (req, res, next) => {
-        let {id} = req.params
-        try {
-            let { list_images} = req.body
-            await bannerService.updateBanner(id,list_images)
-            return res.status(200).json({status: 200,message: 'Updated banner successfully'})
-        } catch (error) {
-            return res.status(500).json({status:500,message: error})
-        }
-    })
+})
 
-bannerApi.delete('/:id',verifyToken,adminRole,
-    async (req, res, next) => {
-        let {id} = req.params   
-        try {
-            await bannerService.deleteBanner(id)
-
-            return res.status(200).json({status:200,message: `Remove banner with id ${id} successfully`})
-        } catch (error) {
-            return res.status(500).json({status:500,message: error})
-        }
-    })
 
 module.exports = bannerApi
