# swagger.json
@@ -2229,144 +2229,6 @@
         }
       }
     },
-    "/banner/{id}": {
-      "get": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "type": "integer",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "tags": [
-          "Banner Api"
-        ],
-        "summary": "Get banner by Id",
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "success",
-            "schema": {
-              "$ref": "#/definitions/banner"
-            }
-          },
-          "500": {
-            "description": "error",
-            "schema": {
-              "$ref": "#/definitions/error"
-            }
-          }
-        }
-      },
-      "put": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "x-access-token",
-            "in": "header",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "type": "integer",
-            "in": "path",
-            "description": "ID of banner",
-            "required": true
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "list_images": {
-                  "type": "array",
-                  "items": {
-                    "type": "string",
-                    "minItems": 0
-
-                  }
-                }
-              }
-            }
-          }
-        ],
-        "tags": [
-          "Banner Api"
-        ],
-        "summary": "Update banner by ID",
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "success",
-            "schema": {
-              "$ref": "#/definitions/success"
-            }
-          },
-          "500": {
-            "description": "error",
-            "schema": {
-              "$ref": "#/definitions/error"
-            }
-          }
-        }
-      },
-      "delete": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "x-access-token",
-            "in": "header",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "type": "integer",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "tags": [
-          "Banner Api"
-        ],
-        "summary": "Delete banner by ID",
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "success",
-            "schema": {
-              "$ref": "#/definitions/success"
-            }
-          },
-          "500": {
-            "description": "error",
-            "schema": {
-              "$ref": "#/definitions/error"
-            }
-          }
-        }
-      }
-    },
     "/user/information": {
       "get": {
         "consumes": [
